--- a/web-apps/public/index.html
+++ b/web-apps/public/index.html
@@ -11,6 +11,7 @@
     <body>
         <canvas id="myChart" width="400" height="150"></canvas>
         <canvas id="myChart2" width="400" height="150"></canvas>
+        <canvas id="myChart3" width="400" height="150"></canvas>
     </body>
     
 </html>
